[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-mssql-connector"
version = "1.0.0"
description = "Conector Ruvic de solo lectura para Microsoft SQL Server"
requires-python = ">=3.10"
dependencies = [
    "pymssql>=2.3,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_mssql_connector*"]
